@@ -1,24 +1,32 @@
 package com.simform.invoicingsystem.service;
 
-import com.simform.invoicingsystem.dto.UserDetail;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import com.simform.invoicingsystem.entity.User;
+import com.simform.invoicingsystem.repository.UserRepository;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Objects;
+import java.util.Collections;
 
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
+
+    private UserRepository userRepository;
+
+    public CustomUserDetailsService(UserRepository userRepository) {
+        this.userRepository = userRepository;
+    }
+
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        UserDetail userDetail = new UserDetail();
-        if (Objects.equals(userDetail.getUsername(), username))
-            return new org.springframework.security.core.userdetails.User(userDetail.getUsername(), userDetail.getPassword(), List.of(new SimpleGrantedAuthority(userDetail.getRole())));
-        throw new UsernameNotFoundException("User with username " + username + " not found");
+        User user = userRepository.findByEmail(username).orElseThrow(() -> new UsernameNotFoundException("User with username " + username + " not found"));
+
+        return new org.springframework.security.core.userdetails.User(
+                user.getEmail(),
+                user.getPassword(),
+                Collections.emptyList());
     }
 }
